getting started with layout and framework

--- a/pages/homePage/home.html
+++ b/pages/homePage/home.html
@@ -15,13 +15,13 @@
     <link rel="manifest" href="site.webmanifest">
     <link href="https://fonts.googleapis.com/css?family=Lobster|Teko&display=swap" rel="stylesheet">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./home.css">
 
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="http://lukas-simianer.com" id="navImg" class="navbar-left"><img src="./images/new logo black.png"></a>
+<body> 
+ <nav class="navbar navbar-expand-lg navbar-custom">
+            <a href="http://lukas-simianer.com" id="navImg" class="navbar-left"><img id="navImg" src="../../images/brText.jpg "></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,63 +29,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html  ">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/productCrud.html">Product Management</a>
+                    <a class="nav-link" href="../calendar/calender.html ">Book Training</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.mongodb.com/cloud/atlas/aws-mongodb" target="_blank">Admin
-                        Management</a>
+                    <a class="nav-link" href="../store/store.html" target="_blank">Buy Swag</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/employeeCrud.html">Payroll and employee managment</a>
+                    <a class="nav-link" href="../results/library.html">Client Success</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/inventory.html">Inventory Viewer</a>
+                    <a class="nav-link" href="../Education/edu.html">Education</a>
                 </li>
             </ul>
         </div>
     </nav>
-
-    <a href="./pages/productCrud.html">
-        <div class='action'>
-            Add, delete, or update products.
-            <br>
-        </div>
-    </a>
-    <a href="./pages/employeeCrud.html">
-        <div class='action' href='crudUser.html'>
-            Add, delete, or update Admin Users.
-            (this will link to your AWS cluster or hosting service)
-            <br>
-        </div>
-    </a>
-    <a href="./pages/inventory.html">
-        <div class='action' href='inventory.html'>
-            View Inventory
-            <br>
-        </div>
-    </a>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
-
 </html>
