landing page animation is chill, needs refining, lets focus on building out the basics, we can make shit pretty later

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,23 +13,24 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title> Business boilerPlate by Lukas Simianer - business facing</title>
     <link rel="manifest" href="site.webmanifest">
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Teko&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <!-- Place favicon.ico in the root directory -->
     <link rel="stylesheet" href="./style.css">
 
 </head>
 
 <body>
-   
-    <div id="container">
-        <div class="container" id="imgDiv">
-            <img src="../images/brText.jpg">
-        </div>
-        <div class="container">
-            <a id="btn" href="./homePage/home.html">Dreams realized here</a>
-        </div>
+
+    <div class="container" id="imgDiv">
+        <img class='bottom' src="../images/babyrino.jpg">
+        <img class='top' src="../images/brText.jpg">
     </div>
-        <!-- <a href="./pages/productCrud.html">
+    <div id="btns" class="container">
+        <a id="btn" href="./homePage/home.html">Dreams realized here</a>
+    </div>
+
+
+    <!-- <a href="./pages/productCrud.html">
         <div class='action'>
             Add, delete, or update products.
             <br>
