--- a/pages/homePage/home.html
+++ b/pages/homePage/home.html
@@ -13,15 +13,15 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title> Business boilerPlate by Lukas Simianer - business facing</title>
     <link rel="manifest" href="site.webmanifest">
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Teko&display=swap" rel="stylesheet">
-    <!-- Place favicon.ico in the root directory -->
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">    <!-- Place favicon.ico in the root directory -->
     <link rel="stylesheet" href="./home.css">
 
 </head>
 
-<body> 
- <nav class="navbar navbar-expand-lg navbar-custom">
-            <a href="http://lukas-simianer.com" id="navImg" class="navbar-left"><img id="navImg" src="../../images/brText.jpg "></a>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-custom">
+        <a href="http://lukas-simianer.com" id="navImg" class="navbar-left"><img id="navImg"
+                src="../../images/brText.jpg "></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,5 +46,53 @@
             </ul>
         </div>
     </nav>
+    <br>
+    <div class="container">
+        <h1 id="header"> Baby Rhino Physiques</h1>
+        <h2 id="subhead">Where dreams are realized</h2>
+        <br>
+        <p id="mainBody"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi mollitia at ea! Error nemo
+            ducimus quia iste tenetur quae reprehende ligendi. Tenetur eveniet fuga dolore similique. Sint cum dolorum
+            fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nemo quia doloremque suscipit, aliquid
+            harum odit tempore, pariatur incidunt rem optio ea ipsum voluptatem illum minus aliquam, vitae in nostrum?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, nulla ratione sunt atque odit modi porro
+            maiores dolor animi! Minus explicabo quibusdam culpa, molestiae et ab doloribus non neque nisi?</p>
+    </div>
+
+    <!-- <div id="carouselExampleInterval" class="carousel slide pointer-event" data-ride="carousel">
+            <div class="carousel-item active" data-interval="5000">
+                <div class="carousel-item active">
+                    <img src="../../images/babyrino.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item active" data-interval="5000">
+                    <img src="../../images/backflex.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item " data-interval="5000">
+                    <img src="../../images/barlook.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item " data-interval="5000">
+                    <img src="../../images/cablesflex.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item " data-interval="5000">
+                    <img src="../../images/frontlookside.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item " data-interval="5000">
+                    <img src="../../images/stageflex.jpeg" class="d-block w-100" alt="...">
+                </div>
+                 <div class="carousel-item active" data-interval="10000">
+                    <img src="../../images/barlook.jpeg" class="d-block w-100" alt="...">
+                </div> -->
+    <!-- </div>
+            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a> -->
+    
+    
 </body>
+
 </html>
