boilerplate is done

--- a/pages/Education/edu.html
+++ b/pages/Education/edu.html
@@ -20,7 +20,7 @@
     <link rel="manifest" href="site.webmanifest">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="stylesheet" href="./results.css">
+    <link rel="stylesheet" href="./edu.css">
 
 </head>
 
@@ -42,16 +42,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../store/store.html">Buy Swag</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="../results/library.html">Client Success</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="../Education/edu.html">Education</a>
                 </li>
             </ul>
         </div>
     </nav>
-<h1>library/results</h1>
+
+    <h1>education</h1>
     <!--Add buttons to initiate auth sequence and sign out-->
     <button id="authorize_button" style="display: none;">Authorize</button>
     <button id="signout_button" style="display: none;">Sign Out</button>
