--- a/pages/homePage/home.html
+++ b/pages/homePage/home.html
@@ -13,7 +13,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title> Business boilerPlate by Lukas Simianer - business facing</title>
     <link rel="manifest" href="site.webmanifest">
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">    <!-- Place favicon.ico in the root directory -->
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <!-- Place favicon.ico in the root directory -->
     <link rel="stylesheet" href="./home.css">
 
 </head>
@@ -47,17 +48,23 @@
         </div>
     </nav>
     <br>
-    <div class="container">
-        <h1 id="header"> Baby Rhino Physiques</h1>
-        <h2 id="subhead">Where dreams are realized</h2>
-        <br>
-        <p id="mainBody"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi mollitia at ea! Error nemo
-            ducimus quia iste tenetur quae reprehende ligendi. Tenetur eveniet fuga dolore similique. Sint cum dolorum
-            fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nemo quia doloremque suscipit, aliquid
-            harum odit tempore, pariatur incidunt rem optio ea ipsum voluptatem illum minus aliquam, vitae in nostrum?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, nulla ratione sunt atque odit modi porro
-            maiores dolor animi! Minus explicabo quibusdam culpa, molestiae et ab doloribus non neque nisi?</p>
-    </div>
+    <section id="section1">
+        <div class="container">
+            <h1 id="header"> Baby Rhino Physiques</h1>
+            <h2 id="subhead">Where dreams are realized</h2>
+            <br>
+            <p id="mainBody"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi mollitia at ea! Error nemo
+                ducimus quia iste tenetur quae reprehende ligendi. Tenetur eveniet fuga dolore similique. Sint cum
+                dolorum
+                fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nemo quia doloremque suscipit,
+                aliquid
+                harum odit tempore, pariatur incidunt rem optio ea ipsum voluptatem illum minus aliquam, vitae in
+                nostrum?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, nulla ratione sunt atque odit modi
+                porro
+                maiores dolor animi! Minus explicabo quibusdam culpa, molestiae et ab doloribus non neque nisi?</p>
+        </div>
+    </section>
 
     <!-- <div id="carouselExampleInterval" class="carousel slide pointer-event" data-ride="carousel">
             <div class="carousel-item active" data-interval="5000">
@@ -91,8 +98,8 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a> -->
-    
-    
+
+
 </body>
 
 </html>
