--- a/pages/index.html
+++ b/pages/index.html
@@ -20,14 +20,15 @@
 </head>
 
 <body>
-
     <div class="container" id="imgDiv">
         <img class='bottom' src="../images/babyrino.jpg">
         <img class='top' src="../images/brText.jpg">
     </div>
-    <div id="btns" class="container">
+    <div id="btns" class="btnContainer">
         <a id="btn" href="./homePage/home.html">Dreams realized here</a>
     </div>
+
+
 
 
     <!-- <a href="./pages/productCrud.html">
