--- a/pages/store/store.html
+++ b/pages/store/store.html
@@ -20,7 +20,7 @@
     <link rel="manifest" href="site.webmanifest">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="stylesheet" href="./results.css">
+    <link rel="stylesheet" href="./store.css">
 
 </head>
 
@@ -39,10 +39,10 @@
                 <li class="nav-item">
                     <a class="nav-link " href="../calendar/calender.html">Book Training</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="../store/store.html">Buy Swag</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="../results/library.html">Client Success</a>
                 </li>
                 <li class="nav-item">
@@ -51,14 +51,8 @@
             </ul>
         </div>
     </nav>
-<h1>library/results</h1>
-    <!--Add buttons to initiate auth sequence and sign out-->
-    <button id="authorize_button" style="display: none;">Authorize</button>
-    <button id="signout_button" style="display: none;">Sign Out</button>
 
-    <pre id="content" style="white-space: pre-wrap;"></pre>
-
-   
-    <script src="./calendar.js"></script>
+   <h1> store</h1>
+    <script src="./store.js"></script>
   </body>
 </html>
