--- a/pages/calendar/calender.html
+++ b/pages/calendar/calender.html
@@ -18,48 +18,52 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title> Business boilerPlate by Lukas Simianer - calender</title>
     <link rel="manifest" href="site.webmanifest">
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Teko&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./calendar.css">
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a href="http://lukas-simianer.com" id="navImg" class="navbar-left"><img src="./images/new logo black.png"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+    <nav class="navbar navbar-expand-lg navbar-custom">
+        <a href="http://lukas-simianer.com" id="navImg" class="navbar-left"><img id="navImg"
+          src="../../images/brText.jpg "></a>        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="../homePage/home.html  ">Home</a>
+                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="./index.html  ">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link " href="./calender.html">Book Training</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/productCrud.html">Product Management</a>
+                    <a class="nav-link" href="../store/store.html">Buy Swag</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.mongodb.com/cloud/atlas/aws-mongodb" target="_blank">Admin
-                        Management</a>
+                    <a class="nav-link" href="../results/library.html">Client Success</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/employeeCrud.html">Payroll and employee managment</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/inventory.html">Inventory Viewer</a>
+                    <a class="nav-link" href="../Education/edu.html">Education</a>
                 </li>
             </ul>
         </div>
     </nav>
 
+    <h1>calendar</h1>
+
+    <div id="PageContainer">
+      <div class="jumbotron-fluid"></div>
+    </div>
     <!--Add buttons to initiate auth sequence and sign out-->
     <button id="authorize_button" style="display: none;">Authorize</button>
     <button id="signout_button" style="display: none;">Sign Out</button>
 
     <pre id="content" style="white-space: pre-wrap;"></pre>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       // Client ID and API key from the Developer Console
       var CLIENT_ID = '573896554765-pbj3g4h0p80g0k7e5epico0lngcrrlv1.apps.googleusercontent.com';
       var API_KEY = 'AIzaSyC1U8w6wmfhwh4cVqzj8egwRuLMuKLAdNI';
@@ -182,7 +186,7 @@
     <script async defer src="https://apis.google.com/js/api.js"
       onload="this.onload=function(){};handleClientLoad()"
       onreadystatechange="if (this.readyState === 'complete') this.onload()">
-    </script>
-    <script src="app.js"></script>
+    </script> -->
+    <script src="./calendar.js"></script>
   </body>
 </html>
